# SlowGL

./: .gitignore  CMakeLists.txt  library.h  roadmap.md
examples/: CMakeLists.txt
examples/lab1/: CMakeLists.txt  main.cpp
examples/lab2/: CMakeLists.txt  main.cpp
src/: main.cpp
src/AuxiliaryFunctions/: Functions.cpp  Functions.h
src/Core/: IModule.h  ModelViewController.cpp  ModelViewController.h  ModuleManager.cpp  ModuleManager.h
src/Debug/: DebugView.cpp  DebugView.h  debugger.h
src/Image/: SFMLImage.cpp  SFMLImage.h
src/Modules/Lab1/: Lab1Module.cpp  Lab1Module.h
src/Modules/Lab2/: Lab2Module.cpp  Lab2Module.h
src/Modules/Lab3/: Lab3Module.cpp  Lab3Module.h
src/OBJParser/: Buffer.cpp  Buffer.h  OBJParser.cpp  OBJParser.h
src/Parsers/OBJParser/: Model3D.cpp  Model3D.h  OBJParser.cpp  OBJParser.h  Parser.h
src/Render/: lines.cpp  triangles.cpp  triangles.h
src/Render/utils/: render_utils.cpp  render_utils.h
src/Surface/: BaseSurface.cpp  BaseSurface.h  shaders.h
src/Texture/: sgl_textures.cpp  sgl_textures.h
src/Utility/: FileUtils.cpp  FileUtils.h  glm_converters.h
src/render/: lines.cpp  lines.h  trinagles.cpp  trinagles.h
tests/: OBJParser_test.cpp
